* vm_method.c (rb_add_method_iseq): use intermediate struct to   avoid initializing struct with variables.   [Bug #11217] * method.h: add a comment about it.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@50772 b2dd03c8-39d4-4d8f-98ff-823fe69b080e